--- a/src/main/resources/styles/mm.css
+++ b/src/main/resources/styles/mm.css
@@ -1,37 +1,45 @@
 .button {
     -fx-font-weight: bold;
-    -fx-background-color: #CCFF99;
+    -fx-background-color: #0bea00;
     
 }
 
 .button:hover {
-    -fx-background-color: #CCFFFF;
+    -fx-background-color: #0bFF00;
     -fx-scale-y: 1.051;
     -fx-border-color:black;
     -fx-border-width: 0 1 1 0;
 }
 
 #mainPane{
-    -fx-background-image: url("https://i.pinimg.com/originals/09/36/a6/0936a65e8a3d9ab7a272b47c5f73a806.jpg");
-    -fx-background-repeat: stretch;   
-    -fx-background-size: 1000 700;
-    -fx-background-position: center center;
-    -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0); 
+    -fx-background-image: url("3.png");
 }
+
+#subPane{
+    -fx-background-image: url("sub.png");
+}
+
 
 
 .text-field {
-    -fx-background-color: #a9a9a9 , #CCFFFF , #CCFFFF;
+    -fx-background-color: #012734 , #012734 , #012734;
     -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+    -fx-text-fill: #0bea00;
 }
 
 .text-field:focused {
-    -fx-background-color: #a9a9a9 , #CCFFFA , #CCFFFA;
+    -fx-background-color: #212734 , #212734 , #212734;
     -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+    -fx-text-fill: #0bea00;
 }
 
 #label_name{
     -fx-font-weight: bold;
-    -fx-text-fill: #CCFFFF;
+    -fx-text-fill: #0bea00;
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+}
+
+.label {
+    -fx-font-weight: bold;
+    -fx-text-fill: #0bea00;
 }
