--- a/src/main/java/com/mrm/typer/view/Game.fxml
+++ b/src/main/java/com/mrm/typer/view/Game.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mrm.typer.controller.GameController">
+<AnchorPane fx:id="rootPane" maxHeight="800.0" maxWidth="1000.0" minHeight="800.0" minWidth="1000.0" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mrm.typer.controller.GameController">
     <children>
         <AnchorPane fx:id="mainPane1" prefHeight="600.0" prefWidth="1000.0">
          <children>
@@ -25,40 +25,40 @@
             </AnchorPane>
          </children>
         </AnchorPane>
-        <AnchorPane fx:id="subPane" layoutX="6.0" layoutY="600.0" prefHeight="100.0" prefWidth="1000.0">
+        <AnchorPane fx:id="subPane" layoutY="700.0" prefHeight="100.0" prefWidth="1000.0">
          <children>
             <Label fx:id="ttc" layoutX="15.0" layoutY="6.0" text="Missed Keypresses">
                <font>
                   <Font size="20.0" />
                </font></Label>
-            <Label layoutX="15.0" layoutY="29.0" text="Enemies">
+            <Label layoutX="500.0" layoutY="6.0" text="Enemies">
                <font>
                   <Font size="20.0" />
                </font></Label>
-            <Label fx:id="label_Enemies" layoutX="101.0" layoutY="28.0" prefHeight="24.0" prefWidth="58.0">
+            <Label fx:id="label_Enemies" layoutX="597.0" layoutY="6.0" prefHeight="24.0" prefWidth="58.0">
                <font>
                   <Font size="20.0" />
                </font></Label>
-            <Label fx:id="label_Missed" layoutX="205.0" layoutY="3.0" prefHeight="30.0" prefWidth="106.0">
+            <Label fx:id="label_Missed" layoutX="206.0" layoutY="6.0" prefHeight="30.0" prefWidth="106.0">
                <font>
                   <Font size="20.0" />
                </font></Label>
-            <Label layoutX="394.0" layoutY="-5.0" text="Score:">
+            <Label layoutX="665.0" layoutY="1.0" text="Score:">
                <font>
-                  <Font size="77.0" />
+                  <Font size="50.0" />
                </font>
             </Label>
-            <Label fx:id="label_Scores" layoutX="645.0" layoutY="4.0" prefHeight="90.0" prefWidth="143.0">
+            <Label fx:id="label_Scores" layoutX="818.0" layoutY="-7.0" prefHeight="90.0" prefWidth="143.0">
                <font>
-                  <Font size="77.0" />
+                  <Font size="50.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="52.0" prefHeight="23.0" prefWidth="52.0" text="Lives">
+            <Label layoutX="320.0" layoutY="6.0" prefHeight="23.0" prefWidth="52.0" text="Lives">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label fx:id="label_livesLeft" layoutX="83.0" layoutY="52.0" prefHeight="24.0" prefWidth="65.0" textFill="RED">
+            <Label fx:id="label_livesLeft" layoutX="392.0" layoutY="6.0" prefHeight="24.0" prefWidth="65.0" textFill="RED">
                <font>
                   <Font size="20.0" />
                </font>
