--- a/src/main/java/com/mrm/typer/view/MainMenu.fxml
+++ b/src/main/java/com/mrm/typer/view/MainMenu.fxml
@@ -30,9 +30,13 @@
             </children>
         </AnchorPane>
         <AnchorPane fx:id="subPane" layoutY="700.0" maxHeight="100.0" maxWidth="1000.0" minHeight="100.0" minWidth="1000.0" prefHeight="100.0" prefWidth="1000.0">
-            <children>
-
-            </children>
+         <children>
+            <Label fx:id="Welcome" layoutX="335.0" layoutY="-25.0" prefHeight="111.0" prefWidth="330.0" text="Welcome" textAlignment="CENTER">
+               <font>
+                  <Font size="68.0" />
+               </font>
+            </Label>
+         </children>
         </AnchorPane>
     </children>
 </AnchorPane>
