--- a/src/main/resources/styles/mm.css
+++ b/src/main/resources/styles/mm.css
@@ -39,7 +39,47 @@
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
-.label {
+#ttc, #label_Enemies, #label_Missed, #label_Scores,#eee, #sss, #lll, #Welcome  {
     -fx-font-weight: bold;
     -fx-text-fill: #0bea00;
+}
+
+#label_GameOver{
+    -fx-font-weight: bold;
+    -fx-text-fill: #0bea00;
+    -fx-text-alignment: center;
+}
+
+
+#mainPane1,#anchorPane1{
+    -fx-background-image: url("3.png");
+}
+
+
+.table-view .column-header-background .label{
+    -fx-background-color: transparent;
+    -fx-text-fill: #0bFF00;
+}
+
+
+.table-row-cell{
+    -fx-background-color: -fx-table-cell-border-color, #616161;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em; /* 0 */
+}
+
+.table-row-cell:odd{
+    -fx-background-color: -fx-table-cell-border-color, #424242;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em; /* 0 */  
+}
+
+.table-view .table-cell{
+    -fx-text-fill: #0bFF00;
+}
+
+.table-view .column-header .label {
+    -fx-text-fill: #012734;
+    -fx-font-weight: bold;
+    -fx-background-color: #616161;
 }
