--- a/src/main/resources/styles/mm.css
+++ b/src/main/resources/styles/mm.css
@@ -39,7 +39,7 @@
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
-#ttc, #label_Enemies, #label_Missed, #label_Scores,#eee, #sss, #lll, #Welcome  {
+#ttc, #label_Enemies, #label_Missed, #label_Scores,#eee, #sss, #lll, #Welcome,  #best_Score, #bsss  {
     -fx-font-weight: bold;
     -fx-text-fill: #0bea00;
 }
