--- a/src/main/resources/styles/mm.css
+++ b/src/main/resources/styles/mm.css
@@ -39,7 +39,7 @@
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
-#ttc, #label_Enemies, #label_Missed, #label_Scores,#eee, #sss, #lll, #Welcome,  #best_Score, #bsss  {
+#ttc, #label_Enemies, #label_Missed, #label_Scores,#eee, #sss, #lll, #Welcome,  #best_Score, #bsss, #pausedText {
     -fx-font-weight: bold;
     -fx-text-fill: #0bea00;
 }
@@ -82,4 +82,34 @@
     -fx-text-fill: #012734;
     -fx-font-weight: bold;
     -fx-background-color: #616161;
+}
+
+#pausedPop {
+    -fx-border-color: #0bea00;
+    -fx-border-width: 10px;
+    -fx-padding: 10;
+    -fx-spacing: 8;
+}
+
+.check-box .box {
+
+    -fx-background-color: #0a1705;
+    -fx-border-color: #c3c3c3;
+    -fx-border-radius:3px;
+
+}
+
+.check-box:selected .mark {
+
+    -fx-background-color: #04ff00;
+
+}
+
+.check-box:selected .box {
+
+    -fx-background-color: #0e2713;
+}
+.check-box {
+    -fx-font-weight: bold;
+    -fx-text-fill: #0bea00;
 }
